--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,4 +34,8 @@ target 'westmanga' do
 
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
+  pod 'react-native-onesignal', :path => '../node_modules/react-native-onesignal'
+
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
 end
