--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-elements": "^1.2.0",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-onesignal": "^3.4.1",
     "react-native-progress-circle": "^2.0.1",
     "react-native-reanimated": "~1.1.0",
     "react-native-render-html": "^4.1.2",
@@ -31,6 +33,7 @@
     "react-native-swiper": "^1.6.0-nightly.3",
     "react-native-typography": "^1.4.1",
     "react-native-unimodules": "~0.5.2",
+    "react-native-video": "4.x",
     "react-native-view-pdf": "^0.10.1",
     "react-native-web": "^0.11.4",
     "react-native-webview": "~5.12.0",
