--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+       <meta-data
+        android:name="com.google.android.gms.ads.APPLICATION_ID"
+        android:value="ca-app-pub-8637010206853096~2004193803"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -35,6 +38,7 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>  
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
