--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "^34.0.1",
     "expo-ads-facebook": "~6.0.0",
     "expo-blur": "^6.0.0",
+    "expo-file-system": "^6.0.2",
     "expo-in-app-purchases": "^6.0.0",
     "expo-linear-gradient": "^6.0.0",
     "graphql": "^14.5.4",
@@ -25,12 +26,10 @@
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-onesignal": "^3.4.1",
-    "react-native-progress-circle": "^2.0.1",
+    "react-native-parallax-header": "^1.1.3",
     "react-native-reanimated": "~1.1.0",
     "react-native-render-html": "^4.1.2",
     "react-native-screens": "1.0.0-alpha.22",
-    "react-native-scrollable-navigation-bar": "^0.0.9",
-    "react-native-swiper": "^1.6.0-nightly.3",
     "react-native-typography": "^1.4.1",
     "react-native-unimodules": "~0.5.2",
     "react-native-video": "4.x",
@@ -43,6 +42,8 @@
     "react-navigation-tabs": "^2.5.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
+    "redux-persist-expo-filesystem": "^2.0.0",
     "rn-placeholder": "^3.0.0"
   },
   "devDependencies": {
