--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
-    "@react-native-firebase/app": "^6.0.0",
-    "add": "^2.0.6",
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
@@ -21,6 +19,7 @@
     "expo-linear-gradient": "^7.0.0",
     "graphql": "^14.5.7",
     "graphql-tag": "^2.10.1",
+    "pusher-js": "^5.0.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
@@ -45,8 +44,7 @@
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-persist-expo-filesystem": "^2.0.0",
-    "rn-placeholder": "^3.0.0",
-    "yarn": "^1.17.3"
+    "rn-placeholder": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
