--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "react-dom": "16.8.3",
     "react-native": "0.59.10",
     "react-native-elements": "^1.2.1",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-onesignal": "^3.4.1",
     "react-native-parallax-header": "^1.1.3",
     "react-native-reanimated": "~1.2.0",
     "react-native-render-html": "^4.1.2",
-    "react-native-screens": "1.0.0-alpha.23",
+    "react-native-screens": "~1.0.0-alpha.23",
     "react-native-typography": "^1.4.1",
     "react-native-unimodules": "~0.5.4",
     "react-native-video": "^5.1.0-alpha1",
