--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,6 +114,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     signingConfigs {
         release {
@@ -174,7 +175,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:16.1.0"
     implementation "com.google.firebase:firebase-core:16.0.9"
     implementation "com.google.firebase:firebase-auth:17.0.0"
-    
+    implementation "com.google.firebase:firebase-firestore:19.0.0"
     addUnimodulesDependencies()
 }
 
