--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -161,6 +161,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-orientation-locker')
+    implementation project(':react-native-linear-gradient')
     implementation project(':react-native-firebase')
     implementation project(':react-native-onesignal')
     implementation project(':react-native-view-pdf')
