--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
+    "@react-native-community/slider": "^2.0.0",
     "apollo-boost": "^0.4.4",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
@@ -27,7 +28,10 @@
     "react-native-elements": "^1.2.1",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-ivideo": "https://github.com/khalis411/react-native-ivideo.git",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-onesignal": "^3.4.1",
+    "react-native-orientation-locker": "^1.1.6",
     "react-native-parallax-header": "^1.1.3",
     "react-native-reanimated": "~1.2.0",
     "react-native-render-html": "^4.1.2",
