--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native-screens": "~1.0.0-alpha.23",
     "react-native-typography": "^1.4.1",
     "react-native-unimodules": "~0.5.4",
-    "react-native-video": "^5.1.0-alpha1",
+    "react-native-video": "4.4.4",
     "react-native-view-pdf": "^0.10.1",
     "react-native-web": "^0.11.7",
     "react-native-webview": "7.0.5",
