--- a/ios/Podfile
+++ b/ios/Podfile
@@ -48,4 +48,6 @@ target 'westmanga' do
 
   pod 'react-native-orientation-locker', :path => '../node_modules/react-native-orientation-locker'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
 end
