--- a/ios/Podfile
+++ b/ios/Podfile
@@ -50,4 +50,6 @@ target 'westmanga' do
 
   pod 'react-native-video', :path => '../node_modules/react-native-video'
 
+  pod 'react-native-slider', :path => '../node_modules/@react-native-community/slider'
+
 end
