--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -161,6 +161,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_slider')
     implementation project(':react-native-video')
     implementation project(':react-native-orientation-locker')
     implementation project(':react-native-linear-gradient')
